# rustler_nif_precompiled

./: .gitignore  README.md  mix.exs
.github/workflows/: ci.yml
lib/: rustler_nif_precompiled.ex
native/mynif_nif/: Cargo.toml  README.md
native/mynif_nif/src/: lib.rs
